--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         <title>Etch a Sketch</title>
     </head>
     <body>
-        <h1>Etch a Sketch</h1>
+        <h1>Etch a Sketch1</h1>
     </body>
 </html>
