--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html>
     <head>
         <script src="main.js"></script>
-        <style src="style.css"></style>
+        <link rel="stylesheet" href="style.css">
         <title>Etch a Sketch</title>
     </head>
     <body>
-        <h1>Etch a Sketch1</h1>
+        <h1>Etch a Sketch</h1>
+        <button id="grid-loader">Grid Size</button>
+        <div class="pixel-container"></div>
+        <script>
+            main();
+        </script>
     </body>
 </html>
